@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2483 2004/03/04 09:12:29 paultucker Exp $
+ * $Id: ChangeLog,v 1.2484 2004/03/04 09:31:07 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2004-03-04 20:45 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
+  * contrib/hbzlib/zip.c
+    ! minor fix in creating array of files when skleton is not passed during
+      unzip operation.
 
 2004-03-04 01:37 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * source/vm/arrays.c
